# rusty-templates-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  RT-License.md  bacon.toml  cookie_policy.md  copy-schemas.sh  docker-compose.files.yml  docker-compose.yml  faqs.md  refund_policy.md  template_license.md
.github/workflows/: main.yml
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/integration/: auth.rs  email.rs  file.rs  foreign_key.rs  mod.rs  order.rs  payments.rs  product.rs  user.rs
lib/src/integration/grpc/: clients.rs
lib/src/integration/grpc/proto/: acl.proto  email.proto  files.proto
lib/src/middleware/: foreign_key.rs  mod.rs  user.rs
lib/src/middleware/auth/: graphql.rs  grpc.rs  rest.rs
lib/src/utils/: auth.rs  custom_error.rs  custom_traits.rs  graphql_api.rs  grpc.rs  mod.rs  models.rs
nginx/: nginx.conf
services/email/: Cargo.toml
services/email/src/: main.rs
services/email/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
services/email/src/graphql/resolvers/email/: mutation.rs
services/email/src/graphql/schemas/: email.rs
services/files/: Cargo.toml
services/files/src/: main.rs
services/files/src/database/schemas/: schemas.surql
services/files/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
services/files/src/graphql/resolvers/files/: mutation.rs  query.rs
services/files/src/graphql/schemas/: general.rs
services/files/src/rest/: handlers.rs
services/mail/: Cargo.toml
services/mail/src/graphql/resolvers/: mutation.rs
services/orders/: Cargo.toml  build.rs
services/orders/src/: main.rs
services/orders/src/database/: connection.rs
services/orders/src/database/schemas/: schemas.surql
services/orders/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
services/orders/src/graphql/resolvers/cart/: mutation.rs  query.rs
services/orders/src/graphql/resolvers/orders/: mutation.rs  query.rs
services/orders/src/graphql/schemas/: general.rs
services/orders/src/grpc/: server.rs
services/orders/src/grpc/proto/: orders.proto
services/orders/src/utils/: orders.rs
services/payments/: Cargo.toml  build.rs
services/payments/src/: main.rs
services/payments/src/database/: connection.rs
services/payments/src/database/schemas/: schemas.surql
services/payments/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
services/payments/src/graphql/resolvers/payments/: mutation.rs
services/payments/src/graphql/schemas/: general.rs  mod.rs  paystack.rs
services/payments/src/grpc/: server.rs
services/payments/src/grpc/proto/: payments.proto
services/payments/src/rest/: handlers.rs
services/payments/src/utils/: payments.rs
services/preview/: Cargo.toml
services/preview/src/: main.rs
services/preview/src/database/schemas/: schemas.surql
services/preview/src/graphql/resolvers/: mutation.rs
services/products/: Cargo.toml  build.rs
services/products/src/: main.rs
services/products/src/database/: connection.rs
services/products/src/database/schemas/: schemas.surql
services/products/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
services/products/src/graphql/resolvers/products/: mutation.rs  query.rs
services/products/src/graphql/schemas/: general.rs
services/products/src/grpc/: server.rs
services/products/src/grpc/proto/: products.proto
services/products/src/utils/: products.rs
services/shared/: Cargo.toml
services/shared/src/: main.rs
services/shared/src/database/: connection.rs
services/shared/src/database/schemas/: schemas.surql
services/shared/src/graphql/resolvers/: mod.rs  mutation.rs  query.rs
services/shared/src/graphql/resolvers/comments/: mutation.rs
services/shared/src/graphql/resolvers/ratings/: mutation.rs
services/shared/src/graphql/schemas/: comments.rs  mod.rs  ratings.rs
