[workspace]
resolver = "2"
members = [ "services/files", "services/shared", "services/orders", "services/payments", "services/preview","services/products", "lib", "services/email"]

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
