[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie = "0.18.1"
gql_client = "1.0.7"
async-graphql = "7.0.15"
hyper = "1.6.0"
serde = "1.0.218"
axum = "0.8.1"
surrealdb = "2.2.1"
tonic = "0.12.3"
prost = "0.13.5"
tracing = "0.1.41"
async-trait = "0.1.87"
tonic-middleware = "0.2.3"

[build-dependencies]
tonic-build = "*"
