[package]
name = "files"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
tokio = { version = "1.38.0", features = ["full"] }
hyper = "1.4.1"
tower-http = { version = "0.5.2", features = ["cors"] }
surrealdb = { version = "1.5.4", features = ["sql2"] }
chrono = "0.4.38"
serde = "1.0.204"
dotenvy = "0.15.7"
lib = { path = "../../lib" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[lints.rust]
unsafe_code = "forbid"
