[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
tokio = { version = "1.38.0", features = ["full"] }
hyper = "1.4.1"
tower-http = { version = "0.5.2", features = ["cors"] }
surrealdb = "1.5.4"
chrono = "0.4.38"
serde = "1.0.204"
dotenvy = "0.15.7"
lib = { path = "../../lib" }

[lints.rust]
unsafe_code = "forbid"
