[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
tokio = { version = "1.43.0", features = ["full"] }
hyper = "1.6.0"
tower-http = { version = "0.6.2", features = ["cors"] }
surrealdb = "2.2.1"
chrono = "0.4.40"
serde = "1.0.218"
dotenvy = "0.15.7"
lib = { path = "../../lib" }
uuid = { version = "1.15.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tonic = "0.12.3"
prost = "0.13.5"
async-trait = "0.1.87"
tonic-middleware = "0.2.3"

[build-dependencies]
tonic-build = "*"

[lints.rust]
unsafe_code = "forbid"
