[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
tokio = { version = "1.38.0", features = ["full"] }
hyper = "1.4.1"
tower-http = { version = "0.5.2", features = ["cors"] }
surrealdb = "2.0.2"
chrono = "0.4.38"
serde = "1.0.204"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
lib = { path = "../../lib" }
serde_json = "1.0.120"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

[lints.rust]
unsafe_code = "forbid"
