[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
tokio = { version = "1.43.0", features = ["full"] }
hyper = "1.6.0"
tower-http = { version = "0.6.2", features = ["cors"] }
surrealdb = "2.2.1"
chrono = "0.4.40"
serde = "1.0.218"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
lib = { path = "../../lib" }
serde_json = "1.0.140"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"

[lints.rust]
unsafe_code = "forbid"
